--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,14 @@ body {
   font-family: Garamond;
   font-size: 1rem;
 }
-
-body .icon {
+body img.icon {
   filter: brightness(0) invert(1);
   width: 50px;
   text-decoration: none;
 }
-
-body h1,
+body h1 {
+  font-size: medium;
+}
 body h2 {
   font-family: Arial;
   color: #e0f2f0;
@@ -23,9 +23,13 @@ body h2 {
   font-size: 1.75rem;
   text-indent: 1rem;
 }
-
-body h1:after,
-body h2:after {
+body h3 {
+  text-indent: 50px;
+}
+body h4 {
+  font-size: large;
+}
+body h2::after {
   display: block;
   background: rgba(100, 204, 197, 0.2509803922);
   content: "";
@@ -33,15 +37,29 @@ body h2:after {
   height: 3px;
   width: 100%;
 }
+body h3::after {
+  display: block;
+  background: rgba(100, 204, 197, 0.2509803922);
+  content: "";
+  margin: auto;
+  margin-top: -15px;
+  height: 3px;
+  width: 85%;
+}
+body .img-left-header {
+  text-indent: 0px;
+}
+body .boldcolor {
+  font-weight: 600;
+  color: #ef6262;
+}
 
 header {
   background-color: #176887;
 }
-
 header header > span {
   align-content: right;
 }
-
 header label .icon {
   margin-right: 10px;
 }
@@ -51,7 +69,6 @@ main {
   top: 50px;
   margin-bottom: 100px;
 }
-
 main div {
   margin: auto;
   width: 75%;
@@ -59,33 +76,28 @@ main div {
   display: grid;
   padding: 5px 0px;
 }
-
 main div blockquote:nth-child(odd) {
   background-color: #2d4356;
   border-radius: 15px;
   padding: 5px;
   width: 100%;
 }
-
 main div blockquote:nth-child(even) {
   background-color: #176887;
   border-radius: 15px;
   padding: 5px;
   width: 100%;
 }
-
 main blockquote {
   margin-bottom: 50px;
 }
-
 main blockquote .img-profile {
   border-radius: 10%;
   max-width: 150px;
   float: left;
   margin: 5px 15px;
 }
-
-main blockquote .img-thumbnail {
+main blockquote .img-thumbnail-right {
   border-radius: 10%;
   max-width: 150px;
   float: right;
@@ -94,28 +106,41 @@ main blockquote .img-thumbnail {
   padding: 0px;
   background-color: transparent;
 }
-
+main blockquote .img-thumbnail-left {
+  border-radius: 10%;
+  max-width: 250px;
+  float: left;
+  margin: 5px 15px;
+  border: 0px;
+  padding: 0px;
+  background-color: transparent;
+}
 main blockquote .card-footer {
   display: inline-block;
   opacity: 0.75;
   padding: 5px 25px;
   font-size: 0.75rem;
 }
-
 main p {
   padding-left: 25px;
   padding-right: 25px;
 }
-
 main article {
   padding: 0px 25px 5px 25px;
 }
-
 main .social-box {
   width: 100%;
   margin-top: 30px;
   margin-bottom: 50px;
   text-align: center;
+}
+main .resume-line {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+main address {
+  display: inline-block;
 }
 
 footer {
@@ -128,42 +153,61 @@ footer {
   background-color: #176887;
 }
 
+table.resume-block {
+  margin: auto;
+  width: 90%;
+}
+table.resume-block th {
+  background-color: #001c30;
+  padding: 5px 10px;
+}
+table.resume-block tr:nth-child(2) {
+  background-color: #2d4356;
+}
+table.resume-block tr {
+  background-color: #3e7a90;
+}
+table.resume-block tr:nth-child(even) {
+  background-color: #176887;
+}
+table.resume-block td {
+  padding: 5px 10px;
+}
+table.resume-block .right-align {
+  text-align: right;
+}
 table.blog {
   width: 100%;
   font-family: Monospace;
 }
-
 table.blog th {
   background-color: #176887;
   width: 15%;
   padding: 5px;
   font-size: 1rem;
 }
-
 table.blog th:nth-child(3) {
   width: 70%;
 }
-
 table.blog tr {
   text-align: left;
   background-color: #3e7a90;
   font-size: 0.75rem;
 }
-
 table.blog tr:nth-child(odd) {
   background-color: #176887;
 }
-
+table.blog tr:hover {
+  background-color: #ef6262;
+}
 table.blog td {
   padding: 1px 5px;
 }
-
 table.blog a,
 table.blog a:visited {
   color: #fff;
   text-decoration: none;
 }
-
 table.blog a:hover {
   color: #fff;
   text-decoration: underline;
@@ -172,18 +216,9 @@ table.blog a:hover {
 form > table {
   width: 100%;
 }
-
 form > table .email {
   width: 99%;
 }
-
-form > table input::-moz-placeholder, form > table textarea::-moz-placeholder {
-  color: #001c30;
-  font-weight: 600;
-  font-family: Arial;
-  font-size: 0.75rem;
-}
-
 form > table input::placeholder,
 form > table textarea::placeholder {
   color: #001c30;
@@ -191,11 +226,9 @@ form > table textarea::placeholder {
   font-family: Arial;
   font-size: 0.75rem;
 }
-
 form > table #message {
   resize: none;
 }
-
 form > table .send {
   background-color: #001c30;
   border: none;
@@ -203,12 +236,10 @@ form > table .send {
   width: 99%;
   text-align: center;
 }
-
 form > table .send:hover {
   background-color: #176887;
   transition: 1s;
 }
-
 form > table .send:active {
   color: #001c30;
   background-color: #dafffb;
@@ -226,11 +257,9 @@ form > table .send:active {
   border: 0;
   margin: auto;
 }
-
 .sub:hover {
   box-shadow: 5px 5px #001c30;
 }
-
 .sub:active {
   background-color: #fff;
   color: #ef6262;
@@ -266,4 +295,4 @@ form > table .send:active {
     position: relative;
     margin-top: auto;
   }
-} 
+}
